src/styles/base/_base.scss
html {
  font-size: 62.5%;
}

body {
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  font-size: $m-size;
  background: linear-gradient( rgba(49, 77, 146, 0.4), rgba(49, 77, 146, 0.4)),
              url(https://images.unsplash.com/photo-1470549813517-2fa741d25c92?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8d1aec0b445e44cfbca1e0741f008709&auto=format&fit=crop&w=1350&q=80);
  margin-top: 150px;
  text-align: center;
}

.app {
  background-color: rgba(225, 245, 254, 0.8);
  margin: auto;
  width: 60%;
  padding: 1rem;
  border-radius:3px;
}

.header {
  font-size: 4.8rem;
  color: #8a6d3b;
}

.btn {
  text-transform: uppercase;
  margin: 1rem;
}

.panel {
  background-color: #fcf8e3;
  margin: auto;
  width: 75%;
  text-align: left;
}

.panel-title {
  font-size: 2rem;
}

.category {
  color: #8a6d3b;
  padding-top: 10px; 
}

#deleteBtn {
  float:right;
}

.badge {
  border: 3px solid #f0ad4e;
  background-color: transparent;
  color: black;
  margin: 3px;
  font-weight: 100;
  font-size: 1.5rem;
  padding: 4px;
}

.instructions {
  font-weight: 100;
}

.modal {
  background-color: transparent;
  margin: auto;
  padding: 5rem 10rem;
  h1 {
    margin-bottom: 5rem;
    margin-top: -3rem;
  }
  .form-group {
    margin: 2rem;
  }
}

@media screen and (max-width: 992px) {
  .app {
    width: 80%;
  }
}

@media screen and (max-width: 768px) {
  .panel {
    width: 80%;
  }
}

@media screen and (max-width: 600px) {
  .app {
    width: 90%
  }
  .panel {
    width: 100%;
  }
}

